_scss/includes/_Navigation.scss
/** @define Navigation */

.Navigation {
  display: flex;
  flex-direction: row;
  margin-right: 2.5rem;
  font-size: 1rem;
  opacity: 0;
  will-change: opacity;
  pointer-events: none;
  transform: translateX(2rem);
  transition: opacity 0.5s, transform 0.5s;

  @media screen and (min-width: $breakpoint + 1) {
    transform: translateX(0rem);
    opacity: 1;
    pointer-events: auto;
  }
}

.Navigation--mobile {
  display: flex;
  flex-direction: column;
  height: 0;
  margin: 0 -3.5rem;
  opacity: 0;
  pointer-events: none;
  box-shadow: inset 0 0 10px rgba($primary, 0.25);
  transition: opacity 0.5s, height 0.5s, padding 0.5s;
  will-change: opacity, height, padding;
  overflow: hidden;

  @media screen and (max-width: $breakpoint) {
    opacity: 1;
  }
}

.Navigation__list {
  display: flex;
  padding-left: 0;
  margin: 0;
  list-style: none;
  font-size: 1.25rem;
}

.Navigation .Navigation__list {
  flex-direction: row;
}

.Navigation--mobile .Navigation__list {
  flex-direction: column;
  pointer-events: none;
}

.Navigation__list-item {
  display: none;
  margin-left: 1em;

  @media screen and (min-width: $breakpoint + 1) {
    display: inline;
  }
}

.Navigation--mobile .Navigation__list-item {
  align-self: flex-end;
  margin: 0 2rem;
  padding: 1.5rem 2.5rem;
  line-height: 0;
  display: block;
  flex-grow: 1;
}

.Navigation--mobile--toggled {
  @media screen and (max-width: $breakpoint) {
    height: calc(130px + 4rem);
    padding: 2rem 0;

    .Navigation__list {
      pointer-events: auto;
    }
  }
}

